--- a/style/index.html
+++ b/style/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="src/style.css">
+        <link rel="stylesheet" href="/tokens/variables.css">
     </head>
     <body>
         <div class="box blue-500">Test Blue 300</div>
